added tabbed main page and switched NWSService to be event driven

--- a/Weather/Weather/Views/DetailPage.xaml
+++ b/Weather/Weather/Views/DetailPage.xaml
@@ -15,7 +15,7 @@
             </Grid.RowDefinitions>
  
             <ScrollView>
-            <StackLayout BackgroundColor="{Binding BackgroundColor}" Padding="8">
+                <StackLayout BackgroundColor="{Binding BackgroundColor}" Padding="8" x:Name="scrollView">
                 <Label Text="{Binding Label}"
                    FontAttributes="Bold"
                    HorizontalOptions="Center"
