finished TabbedView and fixed some location saving bugs

--- a/Weather/Weather/Views/ConditionsView.xaml
+++ b/Weather/Weather/Views/ConditionsView.xaml
@@ -1,20 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:local="clr-namespace:Weather"
-             x:Class="Weather.CurrentConditionsPage"
-             Title="Current Conditions">
-    <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <ScrollView Padding="8">
+             x:Class="Weather.ConditionsView">
+    <ContentView.Content>
+        <ScrollView Padding="8">
             <StackLayout>
                 <Label Text="{Binding Location}"
                        FontSize="Large"/>
@@ -48,8 +41,5 @@
                        HorizontalTextAlignment="Center"/>
             </StackLayout>
         </ScrollView>
-
-            <local:AdMobView Grid.Row="1"/>
-        </Grid>
-    </ContentPage.Content>
-</ContentPage>
+    </ContentView.Content>
+</ContentView>
