--- a/Weather/Weather/Views/MapView.xaml
+++ b/Weather/Weather/Views/MapView.xaml
@@ -1,34 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:local="clr-namespace:Weather"
-             x:Class="Weather.MapPage"
-             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
-             Title="Set Location">
+             x:Class="Weather.MapView"
+             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps">
 
-    <ContentPage.BindingContext>
+    <ContentView.BindingContext>
         <local:MapViewModel/>
-    </ContentPage.BindingContext>
+    </ContentView.BindingContext>
 
-    <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <StackLayout>
+    <ContentView.Content>
+        <StackLayout>
             <maps:Map x:Name="map"
                       MapClicked="map_MapClicked"/>
             <Button x:Name="LocationButton"
                     Text="Use Device Location"
                     Clicked="Button_Clicked"/>
         </StackLayout>
-
-            <local:AdMobView Grid.Row="1"/>
-        </Grid>
-    </ContentPage.Content>
-</ContentPage>
+    </ContentView.Content>
+</ContentView>
