--- a/Weather/Weather/Views/ConditionsView.xaml
+++ b/Weather/Weather/Views/ConditionsView.xaml
@@ -5,7 +5,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:local="clr-namespace:Weather"
-             x:Class="Weather.ConditionsView">
+             xmlns:viewmodel="clr-namespace:Weather.ViewModels"
+             x:Class="Weather.Views.ConditionsView">
+
+    <ContentView.BindingContext>
+        <viewmodel:ConditionsViewModel />
+    </ContentView.BindingContext>
+
     <ContentView.Content>
         <ScrollView Padding="8">
             <StackLayout>
