--- a/Weather/Weather/Views/TodayView.xaml
+++ b/Weather/Weather/Views/TodayView.xaml
@@ -5,8 +5,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:local="clr-namespace:Weather"
-             x:Class="Weather.TodayView">
+             xmlns:viewmodel="clr-namespace:Weather.ViewModels"
+             x:Class="Weather.Views.TodayView">
 
+    <ContentView.BindingContext>
+        <viewmodel:TodayViewModel />
+    </ContentView.BindingContext>
+    
     <ContentView.Content>
         <ScrollView Padding="8" Grid.Row="0">
             <StackLayout>
