--- a/native/app/src/main/res/navigation/mobile_navigation.xml
+++ b/native/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_settings"
-        android:name="com.companyname.weather.fragments.SettingsFragment"
+        android:name="com.companyname.weather.fragments.PreferencesFragment"
         android:label="@string/menu_settings"
-        tools:layout="@layout/settings_fragment" />
+        tools:layout="@xml/preferences" />
 </navigation>
